--- a/pug/index.pug
+++ b/pug/index.pug
@@ -59,8 +59,8 @@ html(lang="en")
                         .addess-bounds
                             p.title Address
                             p.content
-                                | Komplek Ruko Glodok Plaza Blok F No. 106 - 107 <br/>
-                                | Jl. Pinangsia Raya Jakarta Barat 1110
+                                | PT TELESINDO CITRA SEJAHTERA <br/>
+                                | Komplek Ruko Glodok Plaza Blok F No. 106 - 107 Jl. Pinangsia Raya Jakarta Barat 1110
                                 //- | Email. info@ecolink.id
 
                     .social-blunds
