--- a/sass/layout/_section_footer.scss
+++ b/sass/layout/_section_footer.scss
@@ -4,11 +4,11 @@ section.section-footer{
     .footer-bounds{
         background-color: $purple-b;
         width: 100%;
-        height: 580px;
+        height: auto;
         padding: 60px 60px 60px 60px;
 
         .company{
-            width: 70%;
+            width: 60%;
             float: left;
 
             .logo-bounds{
@@ -77,7 +77,7 @@ section.section-footer{
         padding: 0px 60px 00px 60px;
 
         .clear-left{
-            width: 50%;
+            width: 70%;
             display: inline-block;
 
             p.copyright{
@@ -101,6 +101,113 @@ section.section-footer{
                     margin: -3px 20px 0 0;
                     color: $reset-color;
                 }
+            }
+        }
+    }
+}
+
+@include mobile{
+    section.section-footer{
+        .footer-bounds{
+            .company{
+                width: 100%;
+            }
+    
+            .social-blunds{
+                float: none;
+                margin-bottom: 0;
+                margin-top: 160px;
+    
+                .icon-bounds{
+                    float: right;
+                    margin-top: -10px;
+    
+                }
+                p.title-social{
+                    padding-top: 0;
+                    text-align: left;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 750px) {
+    section.section-footer{
+        margin-top: 30px;
+    
+        .footer-bounds{
+            background-color: $purple-b;
+            width: 100%;
+            height: auto;
+            padding: 50px 30px 30px 30px;
+    
+            .company{
+                .logo-bounds{
+                    float: none;
+                    padding-right: 0;
+                    display: table;
+                    margin: 0 auto;
+                }
+        
+                .addess-bounds{
+                    text-align: center;
+        
+                    p.title{
+                        margin-top: 40px;
+                    }
+                }
+            }
+    
+            .social-blunds{
+                float: none;
+                margin-bottom: 40px;
+                margin-top: 250px;
+                
+    
+                .icon-bounds{
+                    float: none;
+                    /* margin-top: -10px; */
+                    display: table;
+                    margin: 0 auto;
+
+                }
+
+                p.title-social{
+                    display: none;
+                    
+                }
+            }
+    
+            #map{
+                height: 300px;
+                width: 100%;
+                border-radius: 20px;
+                box-shadow: 30px 40px 80px 0px #00000025;
+                overflow: hidden;
+            }
+        }
+    
+        .clear-bottom{
+            width: 100%;
+            height: 80px;
+            background-color: $purple-a;
+            color: $reset-color;
+            padding: 0px 30px 0px 30px;
+    
+            .clear-left{
+                width: 100%;
+                display: inline-block;
+    
+                p.copyright{
+                    text-align: center;
+                    margin-top: 14px;
+                }
+            }
+    
+            .clear-right{
+                display: none;
+
             }
         }
     }
