--- a/sass/layout/_section_products.scss
+++ b/sass/layout/_section_products.scss
@@ -10,3 +10,15 @@ section.products{
     }
     
 }
+
+@media (max-width: 750px) {
+    section.products{
+        margin-top: 30px;
+    
+        .product-bounds{
+            padding: 0 30px 0 30px;
+
+        }
+        
+    }
+}
