--- a/pug/index.pug
+++ b/pug/index.pug
@@ -59,8 +59,8 @@ html(lang="en")
                         .addess-bounds
                             p.title Address
                             p.content
-                                | PT TELESINDO CITRA SEJAHTERA <br/>
-                                | Komplek Ruko Glodok Plaza Blok F No. 106 - 107 Jl. Pinangsia Raya Jakarta Barat 1110
+                                | PT. Telesindo Citra Sejahtera <br/>
+                                | Geen Sedayu Bizpark Blok DM3 No. 16 C-H. Jl. Daan Mogot Raya KM. 18 Jakarta Barat
                                 //- | Email. info@ecolink.id
 
                     .social-blunds
