--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="description" content="Any description here ..")
         meta(name="viewport" content="width=device-width, initial-scale=1")
 
-        title Ecolink Indoensia
+        title Ecolink Indonesia
         
         link(rel="stylesheet" href="static/css/main.css")
         link(rel="stylesheet" type="text/css" href="static/css/slick.css")
